// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetIcon customize 1`] = `
<div>
  <div
    class="card bazinga"
  >
    <div
      class="card-body d-flex align-items-center p-3"
    >
      <div
        class="me-3 text-white bg-info p-1"
      >
        icon
      </div>
      <div>
        <div
          class="fs-6 fw-semibold text-info"
        >
          value
        </div>
        <div
          class="text-medium-emphasis text-uppercase fw-semibold small"
        >
          title
        </div>
      </div>
    </div>
    <div
      class="card-footer"
    >
      footer
    </div>
  </div>
</div>
`;

exports[`loads and displays CWidgetIcon component 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="card-body d-flex align-items-center p-3"
    >
      <div
        class="me-3 text-white bg-undefined p-3"
      />
      <div>
        <div
          class="fs-6 fw-semibold text-undefined"
        />
        <div
          class="text-medium-emphasis text-uppercase fw-semibold small"
        />
      </div>
    </div>
  </div>
</div>
`;
